Add AltGraph to the set of modifier flags known to Accelerators.

ui::Accelerator instances built from ui::Events with the AltGraph flag
set lose that modifier, leading to potential for confusion with other
accelerator keys, e.g: both the Alt and AltGraph keys generate events
with key_code=VKEY_MENU, and may only be distinguished by the modifiers
set on the events.

This CL adds knowledge of AltGraph to the ui::Accelerator constructors,
and to the CreateAcceleratorFromNativeKeyboardEvent() helper.

Bug: 787137, 25503
Change-Id: I8bde31947b99d9ae113ed5a38053ae8c5e46d32f